tests/Rules/Media/Fixtures/valid/img_with_alt.html.twig
<img src="photo.jpg" alt="Une description utile">
