tests/Rules/Media/Fixtures/invalid/img_no_alt_interpolated.html.twig
{# 1 errors #}
<html>
  <body>
    <img src="foo.jpg" alt="{{ variable }}">
  </body>
</html>
